# ChunkDMesh

./: .gitignore  README.md  SPECIFICATIONS.md  pyproject.toml  requirements.txt  run.py  test.py
.github/workflows/: build-mcmap.yml  ci.yml
client/: api_config.py  asset_manager.py  assets.py  benchmark.py  both_tui.py  chunky_parser.py  client_tui.py  instance_runner.py  java_utils.py  main.py  mc_lifecycle.py  modrinth.py  monitor.py  p2p.py  provisioner.py  rcon_client.py  runner.py  server_properties.py  tiler.py  updater.py  uploader.py  utils.py  work_loop.py
config/: world_config.json5
docs/: CHUNKY_REFERENCE.md
objects/: patterns.py  shapes.py
orchestrator/: allocator.py  api.py  config.py  database.py  main.py  verifier.py  world_gen.py
rust-tiler/: Cargo.toml
rust-tiler/src/: block_colors.rs  main.rs  nbt.rs  render.rs
scripts/: build_mcmap.sh  generate_block_palette.py  logs_i18n.py
server/: __init__.py  api.py  assembler.py  config.py  constants.py  database.py  db.py  exporter.py  geometry.py  logging_utils.py  main.py  map_renderer.py  mc_loaders.py  mc_modrinth.py  mc_utils.py  mc_versions.py  p2p_server.py  s3_storage.py  server_tui.py  state.py  storage_manager.py  tasker.py  texture_extractor.py  world_assembler.py  world_gen.py
server/config/: logging_config.json  logging_config.json5  schema.sql  world_config.json5
server/map_generator/: __init__.py  config.py  hover_service.py  region_watcher.py  rust_bridge.py  tile_cache.py
server/routes/: __init__.py  admin.py  assets.py  auth.py  client.py  map.py  tasks.py  tiles.py
server/templates/: dashboard.html  heatmap_partial.html  (+2 more)
tests/: conftest.py  test_api.py  test_constants.py  test_storage.py  test_tile_cache.py
tiler/: Cargo.toml
tiler/config/: block_categories.json
tiler/src/: colors.rs  config.rs  lib.rs  main.rs  nbt_parser.rs  renderer.rs  shading.rs  terrain.rs  waterflow.rs
(+4 files in other folders)
