[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["server", "client"]

[project]
name = "chunkdmesh"
version = "0.1.0"
description = "Distributed Minecraft world pre-generation platform"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.14.0",
    "aiosqlite>=0.22.1",
    "colorama>=0.4.6",
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "json5>=0.14.0",
    "pydantic-settings>=2.14.1",
    "pydantic>=2.13.4",
    "pyjwt>=2.13.0",
    "python-dateutil>=2.9.0.post0",
    "python-modrinth>=1.2.1",
    "python-multipart>=0.0.30",
    "readchar>=4.2.0",
    "requests>=2.34.2",
    "sqlalchemy>=2.0.50",
    "uvicorn[standard]>=0.48.0",
    "zstd>=1.5.7.3",
    "Pillow>=10.0.0",
    "rich>=13.9.0",
    "opentelemetry-api>=1.29.0",
    "opentelemetry-sdk>=1.29.0",
    "opentelemetry-exporter-otlp-proto-http>=1.29.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "mypy>=1.13.0",
]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]
ignore = ["E501", "B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
