[package]
name = "minecraft_map_generator"
version = "0.1.0"
edition = "2021"

[lib]
name = "minecraft_map_generator"
crate-type = ["lib", "cdylib"]

[[bin]]
name = "mcmap"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = "0.25"
flate2 = "1"
byteorder = "1"
rayon = "1"
